migrating to Jackson, implementing virtual threads for scraping, and expanding regression coverage